[project]
name = "iv-suface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "datetime>=5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "typing>=3.10.0.0",
    "xlwings>=0.33.16",
]
